# Adv_ml_asgn2

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
api/app/: main.py
docs/: Makefile  conf.py  index.rst  make.bat
models/predictive/: adb_pipe.joblib  lin_pipe.joblib
notebooks/forecasting/: Britto_Rohan-24610990-forecasting-prophet-checkpoint.ipynb
notebooks/predictive/: Britto_Rohan-24610990-predictive-linear_regression-checkpoint.ipynb  Britto_Rohan-24610990-predictive-linear_regression.ipynb  Britto_Rohan-24610990-predictive-multiple_algorithms.ipynb
src/: functions.py  preprocessor_pipeline.joblib
